Fixed bug #19795 # to*() and is*() expect for their arguments an integer in range of 0 - 255